--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "npm run watch & npm run watch-dev & npm run watch-module",
     "watch-dev": "watchify src/index.es6 -d -x dom -x log -o index.dev.js --extension=.es6",
     "watch": "watchify src/index.es6 -x dom -x log -o index.js --extension=.es6",
-    "watch-module": "babel src -w -d ../server/renderer"
+    "watch-module": "babel src -w -d ../server/render"
   },
   "babel": {
     "presets": [
