--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dateformat": "^1.0.12",
     "handlebars": "^4.0.5",
     "marked": "^0.3.6",
+    "prismjs": "^1.5.1",
     "watchify": "^3.7.0"
   }
 }
