--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
+  "codex" : {
+    "only" : [
+      "index.js"
+    ],
+    "noParse" : [
+      "handlebars/lib/index.js"
+    ]
+  },
   "scripts": {
-    "start": "npm run watch & npm run watch-dev & npm run watch-module",
-    "watch-dev": "watchify src/index.es6 -d -r ./src/client_renderer:client_renderer -x dom -x log -x article -x events -x env -x utility -o index.dev.js --extension=.es6",
-    "watch": "watchify src/index.es6 -r ./src/client_renderer:client_renderer -x dom -x log -x article -x events -x env -x utility -o index.js --extension=.es6",
-    "watch-module": "babel src -w -d ../server/render"
+    "watch": "babel src -w -d ../server/render"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
   },
-  "browser": {
-    "highlight.js": "./vendor/highlight.js"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
-  },
   "dependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
-    "babelify": "^7.3.0",
     "dateformat": "^1.0.12",
     "handlebars": "^4.0.5",
     "marked": "^0.3.6",
-    "prismjs": "^1.5.1",
-    "watchify": "^3.7.0"
+    "prismjs": "^1.5.1"
   }
 }
