adds handlebars as noParse

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
       "index.js"
     ],
     "noParse" : [
-      "handlebars/lib/index.js"
+      "node_modules/handlebars/lib/index.js"
     ]
   },
   "scripts": {
