--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "codex": {
-  },
+  "codex": {},
   "scripts": {
-    "start": "babel src -w -d ../server/render/src"
+    "start": "babel src -w -d ../server/render/build"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "env"
     ]
   },
   "dependencies": {
@@ -17,6 +16,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-env": "^1.6.0"
   }
 }
